--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
   }
 }
 
-body {
+.app header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -22,6 +22,7 @@ body {
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  
 }
 
 .App-link {
@@ -35,4 +36,15 @@ body {
   to {
     transform: rotate(360deg);
   }
+}
+ul{
+  list-style-type: none;
+}
+.light{
+  background-color: white;
+  color: #333;
+}
+.dark{
+  background-color: #333;
+  color: antiquewhite;
 }
